--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -7,6 +7,7 @@
 <body>
   <h1> Bread Products</h1>
   
-  <p> list of bread procuts </p>
+  <p> list of bread products </p>
+  <h4> added ingredients list</h4>
 </body>
 </html>
