added notes, completed coding

--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1> Bread Products</h1>
+  <span>Notes: STUFF</span>
   
   <p> list of bread products </p>
   <h4> added ingredients list</h4>
