--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -7,8 +7,7 @@
 <body>
 <h2> contacts</h2>
 <h3> Names - phones</h3>
-<h2>Seasonal breads</h2>
-<p> lists <p>
+<g> Notes :STUFF </g>
 
 </body>
 </html>
